--- a/example/demo.html
+++ b/example/demo.html
@@ -42,7 +42,7 @@
 <body>
     <header class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-              <a class="navbar-brand" href="https://github.com/Yayure/emoji-line-break.js">emoji-line-break.js<small class="h6">&ensp;v1.0.2</small></a>
+              <a class="navbar-brand" href="https://github.com/Yayure/emoji-line-break.js">emoji-line-break.js<small class="h6">&ensp;v@last</small></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -166,7 +166,7 @@
             en: `JavaScript (JS) is a lightweight, interpreted, or just-in-time compiled programming language with first-class functions. While it is most well-known as the scripting language for Web pages, many non-browser environments also use it, such as Node.js, Apache CouchDB and Adobe Acrobat. JavaScript is a prototype-based, multi-paradigm, single-threaded, dynamic language, supporting object-oriented, imperative, and declarative (e.g. functional programming) styles.☕☕☕☕☕☕☕☕☕☕☕☕☕☕☕☕☕☕☕☕☕☕☕☕☕`
         },
         readme: {
-            zh: 'https://github.com/Yayure/emoji-line-break.js/blob/master/README_ZH.md',
+            zh: 'https://github.com/Yayure/emoji-line-break.js/blob/master/README.ZH-CN.md',
             en: 'https://github.com/Yayure/emoji-line-break.js/blob/master/README.md'
         }
     }
