--- a/example/demo.html
+++ b/example/demo.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="description" content="Split emoji text into multiple lines.">
 <meta name="keywords" content="emoji-line-break.js, emoji-line-break">
 <title>emoji-line-break.js</title>
